--- a/src/route/coininfo.css
+++ b/src/route/coininfo.css
@@ -143,3 +143,50 @@ th {
 .green {
     color: #32d800;
 }
+
+
+@media screen and (max-width: 720px) {
+    .coin-container{
+        margin-bottom: 15rem;
+    }
+
+    .info {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 1rem auto;
+    }
+
+    .info .coin-price h1 {
+        font-size: 1.75rem;
+    }
+
+    .table-container {
+        max-width: 600px;
+        width: 100%;
+        margin: 1rem auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .stats {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 1.5rem;
+        width: 100%;
+        padding: 0 1.5rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .about h3 {
+        margin: 1rem auto;
+    }
+
+    .about p {
+        font-size: .75rem;
+        text-align: justify;
+    }
+    
+}
